# meeting-notes-assistant

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  Dockerfile.dev  Makefile  README.md  RUNBOOK.md  dev.db  docker-compose.alembic.ci.yml  docker-compose.backend-env.yml  docker-compose.ci.yml  docker-compose.dev.yml  docker-compose.health-ok.yml  docker-compose.healthcheck.yml  docker-compose.labels.yml  docker-compose.minio-console.yml  docker-compose.minio-traefik.yml  docker-compose.minio-trustca.yml  docker-compose.minio.yml  docker-compose.override.ci.yml  docker-compose.override.yml  docker-compose.postgres.yml  docker-compose.prodready.yml  docker-compose.prodready.yml.bak  docker-compose.prometheus.yml  docker-compose.public.yml  docker-compose.redis.ci.yml  docker-compose.rq.yml  docker-compose.runtime.yml  docker-compose.traefik-api.yml  docker-compose.traefik-clean.yml  docker-compose.traefik-local.yml  docker-compose.traefik-min.yml  docker-compose.traefik-minio.yml  docker-compose.traefik-provider.yml  docker-compose.traefik-standalone.yml  docker-compose.traefik.yml  docker-compose.uvicorn.yml  (+10 more)
backend/: Dockerfile  README.md  alembic.ini  init_db.py  mypy.ini  pyproject.toml  requirements.txt  worker.Dockerfile
backend/alembic/: env.py  env.py.bak  script.py.mako
backend/alembic/versions/: 000000000000_empty.py  0001_baseline_schema.py  0002_add_notes.py  20260616_billing_foundation.py  2031869a6e0a_auto.py  2031_add_jobs_table.py  2031_add_meetings_table.py  2032_add_transcripts.py  2033_add_scheduled_at_to_meetings.py  2033_add_summaries.py
backend/app/: ci_init_db.py  db.py  db_legacy.py  deps.py  health.py  logging_utils.py  main.py  metrices.py  metrics.py  minio_client.py  models.py  schemas.py  storage.py  storage.py.bak  summarizers.py  tasks.py  worker.py
backend/app/api/: __init__.py  health.py  jobs.py
backend/app/core/: db.py  errors.py  jobs_schema_patch.py  logger.py  settings.py
backend/app/jobs/: __init__.py  demo.py  enqueue_with_metrics.py  meetings.py  pipeline.py  process_meeting.py  queue.py  smoke.py  smoke_tasks.py
backend/app/models/: __init__.py  billing.py  job.py  meeting.py  meeting.pyi  meeting_feedback.py  meeting_notes.py  note.py  notes.py  notes.pyi  upload_ledger.py  user.py
backend/app/obs/: metrics.py
backend/app/routers/: admin.py  auth.py  billing.py  dev_files.py  feedback.py  health.py  jobs.py  jobs_api.py  meeting_artifacts.py  meeting_notes_api.py  meetings.py  notes.py  notes_api.py  openapi_force.py  processing_api.py  rq_jobs.py  slides.py  usage.py
backend/app/schemas/: auth.py  feedback.py  meeting_notes.py  meetings.py  notes.py
backend/app/services/: __init__.py  action_cleanup_pass.py  action_consolidation.py  action_item_postprocess.py  action_recall_owner_marker_pass.py  auth.py  billing.py  chunk_action_extractor.py  chunk_action_recovery.py  chunk_action_score.py  data_controls.py  llm_polish.py  long_transcript_sections.py  media.py  media_metadata.py  meeting_confidence_guardrail.py  meeting_regression_evaluator.py  minio_client.py  notes.py  notes_postprocess.py  ocr.py  (+25 more)
backend/migrations/: env.py  script.py.mako
backend/mna_backend.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
backend/scripts/: check_upload_ledger_table.py  predeploy_migrate.sh  run_meeting_regression.py  run_meeting_regression_baseline.py  run_quality_engine_v2_regression_gate.py  run_quality_engine_v3_regression_gate.py  score_chunk_action_expected.py
backend/tests/: test_action_consolidation.py  test_action_item_postprocess.py  test_action_recall_final_section.py  test_action_recall_s01_m05.py  test_admin_monitoring.py  test_chunk_action_exact_scorer.py  test_chunk_action_extractor.py  test_chunk_action_recovery.py  test_chunk_action_score.py  test_client_facing_action_next_step_recall.py  test_compare_quality_engine_v2_baseline_script.py  test_confidential_mode_premium_gate.py  test_confidential_mode_worker.py  test_llm_polish.py  test_local_summary_active_consistency.py  test_local_whisper_transcriber.py  test_long_meeting_action_recall_strategy.py  test_long_meeting_dynamic_limits.py  test_long_meeting_polish_after_llm.py  test_long_meeting_quality_polish_v1.py  test_long_meeting_quality_v1.py  test_long_transcript_sections.py  test_markdown_output_polish.py  test_meeting81_quality_guards.py  test_meeting_create_quota.py  test_meeting_data_controls.py  test_meeting_notes_api_keypoints_guardrail.py  test_meeting_notes_api_publishable_guardrail.py  test_meeting_processing_job_timeout.py  test_meeting_quality_benchmark_suite.py  test_meeting_regression_baseline_runner.py  test_meeting_regression_evaluator.py  test_notes_quality_regression.py  test_openai_whisper_transcriber.py  test_owner_marker_action_recall.py  test_persisted_owner_marker_promotion.py  test_plan_duration_limits.py  test_process_meeting_action_contract.py  test_process_meeting_qev3_result_selection.py  test_processing_observability.py  (+27 more)
backend/worker/: __init__.py  redis_client.py  tasks.py  tasks_processing.py  worker.py
(+442 files in other folders)
