[project]
name = "mna-backend"
version = "0.1.0"
description = "Meeting Notes Assistant backend (FastAPI)"
requires-python = ">=3.11"
dependencies = [
  # web framework & server
  "fastapi>=0.115.0",
  "uvicorn[standard]>=0.30.0",

  # settings & validation
  "pydantic>=2.5",
  "pydantic-settings>=2.3.0",

  # data & db
  "sqlalchemy>=2.0.0",
  "psycopg[binary]>=3.2",      # â† psycopg v3 driver to match postgresql+psycopg://
  "alembic>=1.13.1",

  # http + storage + uploads
  "httpx>=0.25.0",
  "minio>=7.2.0",
  "python-multipart>=0.0.9",

  # vision pipeline (used by OCR worker)
  "pillow>=10.0.0",
  "pytesseract>=0.3.10",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0.0",
  "pytest-asyncio>=0.23.0",
  "ruff>=0.5.0",
  "mypy>=1.7.0",
  "types-requests>=2.32.0.20240712",
]

[build-system]
requires = ["setuptools>=68.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["app*", "packages*"]
exclude = ["alembic*", "tests*"]

