[project]
name = "mna-backend"
version = "0.1.0"
description = "Meeting Notes Assistant backend (FastAPI)"
requires-python = ">=3.11"
dependencies = [
  # web framework & server
  "fastapi>=0.115.0",
  "uvicorn[standard]>=0.30.0",

  # settings & validation
  "pydantic>=2.5",
  "pydantic-settings>=2.3.0",

  # data & db
  "sqlalchemy>=2.0.0",
  # Use psycopg2 runtime driver to match DSN postgresql+psycopg2://
  "psycopg2-binary>=2.9",

  # http + storage + uploads
  "httpx>=0.25.0",
  "minio>=7.2.0",
  "python-multipart>=0.0.9",

  # vision pipeline (used by OCR worker)
  "pillow>=10.0.0",
  "pytesseract>=0.3.10",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0.0",
  "pytest-asyncio>=0.23.0",
  "ruff>=0.5.0",
  "mypy>=1.7.0",
  "types-requests>=2.32.0.20240712",
]

[build-system]
requires = ["setuptools>=68.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["app*", "packages*"]
exclude = ["alembic*", "tests*"]

# ----------------------------
# Code quality configuration
# ----------------------------

[tool.ruff]
target-version = "py311"
line-length = 100
exclude = [
  "alembic/",
  "mna_backend.egg-info/",
  "tests/",
]

[tool.ruff.lint]
extend-select = ["I"]  # import sorting

# If you ever need per-file ignores for backend code, add here.
# [tool.ruff.lint.per-file-ignores]
# "app/routers/*.py" = ["SIM*"]

[tool.mypy]
python_version = "3.11"
ignore_missing_imports = true
no_implicit_optional = true
warn_unused_ignores = true
pretty = true
exclude = ["alembic/"]

# Narrowly silence dynamic attrs / Any returns in a few modules until fully typed.
[[tool.mypy.overrides]]
module = [
  "backend.app.workers.transcribe.worker",
  "backend.app.workers.llm.summarize",
  "backend.app.workers.vision.ocr",
  "backend.alembic.env",
  "backend.app.services.minio_client",
  "backend.packages.shared.minio_client",
]
disable_error_code = ["attr-defined", "no-any-return"]
