[project]
name = "mna-backend"
version = "0.1.0"
description = "Meeting Notes Assistant backend (FastAPI)"
requires-python = ">=3.11"
dependencies = [
  # web framework & server
  "fastapi>=0.115.0",
  "uvicorn[standard]>=0.30.0",

  # settings & validation
  "pydantic>=2.5",
  "pydantic-settings>=2.3.0",
  "python-dotenv>=1.1.1",

  # data & db
  "sqlalchemy>=2.0.0",
  "psycopg2-binary>=2.9",

  # queue + cache
  "redis>=5.0.8",
  "rq>=1.16.2",

  # storage + AWS sdk
  "boto3>=1.34.162",
  "minio>=7.2.0",

  # http + uploads
  "httpx>=0.25.0",
  "python-multipart>=0.0.9",

  # observability / logging
  "prometheus-client>=0.21.0",
  "prometheus-fastapi-instrumentator>=7.0.0",
  "structlog>=24.4.0",

  # notes pipeline
  "openai>=1.51.2",
  "nltk>=3.9.1",
  "sumy>=0.11.0",
  "transformers>=4.44.2",

  # vision pipeline
  "pillow>=10.0.0",
  "pytesseract>=0.3.10",

  # transcription
  "faster-whisper>=1.2.1",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0.0",
  "pytest-asyncio>=0.23.0",
  "ruff>=0.5.0",
  "mypy>=1.7.0",
  "types-requests>=2.32.0.20240712",
]

[build-system]
requires = ["setuptools>=68.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["app*", "packages*"]
exclude = ["alembic*", "tests*"]

[tool.ruff]
target-version = "py311"
line-length = 100
exclude = [
  "alembic/",
  "mna_backend.egg-info/",
  "tests/",
]

[tool.ruff.lint]
extend-select = ["I"]

[tool.mypy]
python_version = "3.11"
ignore_missing_imports = true
no_implicit_optional = true
warn_unused_ignores = true
pretty = true
exclude = ["alembic/"]

[[tool.mypy.overrides]]
module = [
  "backend.app.workers.transcribe.worker",
  "backend.app.workers.llm.summarize",
  "backend.app.workers.vision.ocr",
  "backend.alembic.env",
  "backend.app.services.minio_client",
  "backend.packages.shared.minio_client",
]
disable_error_code = ["attr-defined", "no-any-return"]
